# scoutapps

./: .clang-format  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .ocamlformat  .project  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-SUGGESTED.json  COM-DATA-DESIGN.md  COPYRIGHT  DEVELOPMENT.md  DevelopingGuide.md  DkSDK.md  LICENSE  QUICK-MACOS.md  README.md  TROUBLESHOOTING.md  WSL2.md  __dk.cmake  _all_cmake.dune  build.gradle  dkproject.jsonc  dune-file  dune-project  settings.gradle  sql.sql  test.db  troubleshoot.db
app/: build.gradle
ci/: build-test.sh  (+2 more)
data/src/main/cpp/: CMakeLists.txt  data.cpp  register.c
dependencies/: CMakeLists.txt
dependencies/lwt/: CMakeLists.txt  discover.in.ml
dependencies/lwt/lwt_react.1.2.0/: opam
dependencies/sqlite3/: CMakeLists.txt  discover.in.ml  patch-c.cmake  patch-ml.cmake
dependencies/sqlite3/proj/: CMakeLists.txt  README.md
dependencies/zxing/: CMakeLists.txt  environment.yml
src/ManagerApp/: CMakeLists.txt  Info.not-xcode.in.plist  ManagerApp_ml.ml  ZXingQtCamReader.cpp  ZXingQtReader.cpp  ZXingQtReader.h  ZXingReader.cpp  _ManagerAppOCaml.dune  _ManagerApp_ml.dune  notarize-macos.sh  squirrel_scout_manager.c
src/ManagerApp/include/squirrel_scout_manager/: squirrel_scout_manager.h
src/Objs/: CMakeLists.txt  SquirrelScout_Objs.ml  SquirrelScout_Objs.mli  _SquirrelScout_Objs.dune  dune
src/Std/: CMakeLists.txt  Schema.java  SquirrelScout_Std.ml  SquirrelScout_Std.mli  SquirrelScout_Std_intf.ml  SquirrelScout_db.ml  _SquirrelScout_db.dune  aws_manager.ml  db_operation_utils.ml  db_utils.ml  dune  main.ml  match_schedule_table.ml  my_lwt_extras.ml  qr_manager.ml  raw_match_data_table.ml  robot_pictures_table.ml  schema.capnp  schema.ml  schema.mli
tests/Units/: CMakeLists.txt  _test_HelloLib_ml.dune  _test_Std_ml.dune  dune  generic-ffi-main.c
tests/Units/HelloLib/: test_HelloLib_ml.ml
tests/Units/ManagerApp/: CMakeLists.txt
tests/Units/Objs/: test_Objs_ml.ml
tests/Units/Std/: test_Std_ml.ml
tests/Units/Std/match_schedule/: match_schedule.json
tests/Units/arithmetic/: arithmetic.ml
us/SonicScoutAndroid/: .gitignore  .project  CMakeLists.txt  CMakePresets.json  COM-DATA-DESIGN.md  COPYRIGHT  README.md  dkproject.jsonc  dune-project  gradle.properties
us/SonicScoutAndroid/data/: build.gradle  dune
us/SonicScoutAndroid/data/src/main/: AndroidManifest.xml
us/SonicScoutAndroid/data/src/main/cpp/: CMakeLists.txt  register.c
us/SonicScoutAndroid/dependencies/: CMakeLists.txt
us/SonicScoutAndroid/dkconfig/: build.gradle
us/SonicScoutAndroid/fetch/: .gitignore  dune
us/SonicScoutAndroid/opam/: SquirrelScoutAndroidApp.opam  SquirrelScout_Objs.opam
us/SonicScoutBackend/: .gitignore  .gitlab-ci.yml  .ocamlformat  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-SUGGESTED.json  DEVELOPMENT.md  DkSDK.md  README.md  _all_cmake.dune  dkproject.jsonc  dune  dune-project  sql.sql
us/SonicScoutBackend/ci/: build-test.sh  exec.sh  wsl2-setup.cmd
us/SonicScoutBackend/ci/setup-dkml/gh-linux/post/: dune
us/SonicScoutBackend/ci/setup-dkml/gh-windows/pre/: action.yml  dune
us/SonicScoutBackend/ci/setup-dkml/gl/: dune  setup-dkml.gitlab-ci.yml
us/SonicScoutBackend/ci/setup-dkml/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86_64.sh
us/SonicScoutBackend/cmake/scripts/dev/gcm/: install.cmake
us/SonicScoutBackend/data/: schedule.json
us/SonicScoutBackend/dependencies/: CMakeLists.txt
us/SonicScoutBackend/dependencies/zxing/: CMakeLists.txt  environment.yml  requirements.txt
us/SonicScoutBackend/fetch/: dune
us/SonicScoutBackend/opam/: SonicScout.opam  SonicScout_MainCLI.opam  SonicScout_ManagerApp.opam  SonicScout_Objs.opam  SonicScout_ObjsLib.opam  SonicScout_Std.opam  SonicScout_Units.opam  SquirrelScout.opam  SquirrelScout_ManagerApp.opam  SquirrelScout_Units.opam
us/SonicScoutBackend/packaging/: CMakeLists.txt  Welcome.txt
us/SonicScoutBackend/sign-audit/: ed0c50ff-a3e7-4133-8665-2a4ace22e031.json
us/SonicScoutBackend/src/: CMakeLists.txt
us/SonicScoutBackend/src/MainCLI/: CMakeLists.txt  SquirrelScout_cli.ml  _SquirrelScout_cli.dune
us/SonicScoutBackend/src/ManagerApp/: CMakeLists.txt  ZXingQt5CamReader.qml  ZXingQtCamReader.cpp  ZXingQtReader.h  squirrel_scout_manager.c
us/SonicScoutBackend/src/SonicScout_MainCLI/: CMakeLists.txt  SquirrelScout_cli.ml  _SquirrelScout_cli.dune  _main.c  dune  open__.ml
us/SonicScoutBackend/src/SonicScout_ManagerApp/: Info.xcode.plist  ManagerApp_ml.ml  ZXingQtCamReader.cpp  ZXingQtReader.cpp  ZXingReader.cpp  _ManagerApp_ml.dune  dune  notarize-macos.sh  open__.ml
us/SonicScoutBackend/src/SonicScout_Objs/: CMakeLists.txt  DkCoder_Std.ml  ObjsEntry.ml  ObjsEntry.mli  SquirrelScout_Objs.ml  SquirrelScout_Objs.mli  dune  open__.ml
us/SonicScoutBackend/src/SonicScout_ObjsLib/: CMakeLists.txt  Init.ml  SquirrelScout_ObjsLib.ml  _SquirrelScout_ObjsLib.dune  dune  open__.ml
us/SonicScoutBackend/src/SonicScout_Std/: CMakeLists.txt  Db_utils.ml  DkSDKFFI_OCaml.ml  DkSDKFFI_OCaml0.ml  Intf.ml  Main.ml  Match_schedule_table.ml  Raw_match_data_table.ml  Robot_pictures_table.ml  Schema.mli  StdEntry.ml  StdEntry.mli  dune  open__.ml  schema.capnp  team_names_table.ml
us/SonicScoutBackend/src/Std/: CMakeLists.txt  SquirrelScout_Std.ml  SquirrelScout_Std.mli  SquirrelScout_Std_intf.ml  db_utils.ml  dune  robot_pictures_table.ml
us/SonicScoutBackend/tests/: CMakeLists.txt
us/SonicScoutBackend/tests/SonicScout_Units/: CMakeLists.txt  _test_Objs_ml.dune  _test_Std_ml.dune  dune
us/SonicScoutBackend/tests/SonicScout_Units/ManagerApp/: CMakeLists.txt
us/SonicScoutBackend/tests/SonicScout_Units/Objs/: open__.ml  test_Objs_ml.ml
us/SonicScoutBackend/tests/SonicScout_Units/Std/: test_Std_ml.ml
us/SonicScoutBackend/tests/SonicScout_Units/arithmetic/: test_arithmetic_ml.ml
us/SonicScoutBackend/tests/Units/: CMakeLists.txt  _test_Objs_ml.dune  _test_Std_ml.dune  _test_arithmetic_ml.dune
us/SonicScoutBackend/tests/Units/Objs/: test_Objs_ml.ml
us/SonicScoutBackend/tests/Units/arithmetic/: arithmetic.c  arithmetic.ml
(+191 files in other folders)
